# mirc

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
all/: CMakeLists.txt
src/: client.cc  core.cc  ctre.cc  event.cc  mirc.cc  parser.cc
test/: CMakeLists.txt
test/src/: test_client.cc  test_core.cc  test_event.cc  test_parser.cc
